Adiciona fonts do octicons da um require no arquivo less principal

--- a/src/files/less/styles.less
+++ b/src/files/less/styles.less
@@ -1,5 +1,8 @@
 @import "normalize";
 
+//
+@import "packages/octicons";
+
 body {
     font: 16px/1.6 Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
     color: #333;
