--- a/src/files/less/partials/content.less
+++ b/src/files/less/partials/content.less
@@ -1,9 +1,9 @@
-// a {
-//     color: #4183c4;
-//     text-decoration: none;
-//     background: transparent;
-//
-//     &:hover {
-//         text-decoration: underline;
-//     }
-// }
+a {
+    color: #4183c4;
+    text-decoration: none;
+    background: transparent;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
